Correct spacing of new tile form.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -224,6 +224,7 @@ ul .dndDraggingSource {
   /*how to force an element to the bottom of the container it is in? -- should it be at the bottom of the list container or just under the last card??*/
   font-size: 0.85em;
   text-align: center;
+  margin-bottom: 12px;
 }
 
 /*Highlight input when valid and invalid*/
